--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.3"
 
 services:
-  app:
+  lets-fork:
     build: .
-    command: gaper --ignore client
+    command: gaper
     env_file: .env
     environment:
       CGO_ENABLED: 0
     volumes:
-      - .:/go/src/github.com/peterzernia/app
+      - .:/go/src/github.com/peterzernia/lets-fork
     ports:
       - "8003:8003"
